--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,12 +6,12 @@
 
   .news-loader{
     width: 50%;
-    height: 100vh;
+    height: fit-content;
     // border: 1px solid black;
 
     .news{
       width: 100%;
-      height: 100vh;
+      margin-bottom: 30px;
       // border: 1px solid black;
 
       .news-img{
