--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -61,5 +61,29 @@
         }
       }
     }
+
+    .pagination{
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+      button{
+        border: 0;
+        border-radius: 25px;
+
+        i{
+          font-size: 25px;
+          color: var(--blue-color);
+
+          cursor: pointer;
+          margin: 20px;
+        }
+
+        &:active{
+          transform: scale(0.9);
+          transition: all 0.1s;
+        }
+      }
+    }
   }
 }
