--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-optical-sizing: auto;
   font-style: normal;
 
-  --background-color: #fffdfc;
+  --background-color: #faf5ef;
   --white-color: #fff;
   --blue-color: #482dff;
 
