--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -9,6 +9,10 @@
     width: 50%;
     height: fit-content;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 800px) {
+      width: 100%;
+    }
   }
 
   .news-recent{
@@ -36,7 +40,6 @@
       justify-content: space-between;
       align-items: center;
       margin: 10px;
-      // border: 1px solid black;
 
       img{
         width: 150px;
@@ -44,6 +47,11 @@
         margin: 10px;
 
         border-radius: 10px;
+
+        @media screen and (max-width: 450px) {
+          width: 100%;
+          height: 70%;
+        }
       }
 
       .rec-details{
@@ -60,6 +68,11 @@
           font-size: 16px;
           color: gray;
         }
+
+        @media screen and (max-width: 450px) {
+          width: 100%;
+          text-align: center;
+        }
       }
 
       &:hover{
@@ -69,6 +82,19 @@
 
         border-radius: 5px;
       }
+
+      @media screen and (max-width: 450px) {
+        display: block;
+        
+      }
     }
+
+    @media screen and (max-width: 800px) {
+      width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    display: block;
   }
 }
