--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -13,6 +13,12 @@
     @media screen and (max-width: 800px) {
       width: 100%;
     }
+
+    @media screen and (max-width: 550px) {
+      .pagination{
+        justify-content: center;
+      }
+    }
   }
 
   .news-recent{
