--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -22,11 +22,15 @@
   }
 
   .news-recent{
+    position: sticky;
+    top: 120px;
+    left: 0;
     height: fit-content;
     width: 40%;
     padding: 20px;
     border-radius: 5px;
     background-color: white;
+    margin-bottom: 50px;
 
     .rec{
       width: fit-content;
@@ -36,7 +40,6 @@
       margin-bottom: 20px;
       padding: 5px 30px 8px 30px;
       border-radius: 50px;
-
 
       background-color: var(--blue-color);
     }
