--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 
   background-color: rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(4px);
